--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="https://www.linkedin.com/in/enahuelrodriguez/">Nahuel Rodriguez</a>.
     </div>
+    <div class="channel">
+      <iframe src="https://player.twitch.tv/?channel=chptv&parent=frontendmentor-tarjeta-de-vista-previa-de-estad-sticas.vercel.app&autoplay=true&muted=true"
+        frameborder="0" allowfullscreen="true" scrolling="no" height="200" width="300"></iframe>
+    </div>
   </footer>
 
 </body>
